fix(mobile): confusing shift when opening keyboard in split on iOS

--- a/apps/client/src/widgets/type_widgets/text/mobile_editor_toolbar.css
+++ b/apps/client/src/widgets/type_widgets/text/mobile_editor_toolbar.css
@@ -2,7 +2,7 @@ body.mobile {
     .classic-toolbar-outer-container {
         contain: none !important;
     }
-    
+
     .classic-toolbar-outer-container.visible {
         height: 38px;
         background-color: var(--main-background-color);
@@ -10,14 +10,14 @@ body.mobile {
         overflow: visible;
         flex-shrink: 0;
     }
-    
-    #root-widget.virtual-keyboard-opened .classic-toolbar-outer-container.ios {
+
+    #root-widget.ios.virtual-keyboard-opened .classic-toolbar-outer-container {
         position: absolute;
         inset-inline-start: 0;
         inset-inline-end: 0;
         bottom: 0;
     }
-    
+
     .classic-toolbar-widget {
         position: absolute;
         bottom: 0;
@@ -30,15 +30,15 @@ body.mobile {
         user-select: none;
         scrollbar-width: 0 !important;
     }
-    
+
     .classic-toolbar-widget::-webkit-scrollbar:horizontal {
         height: 0 !important;
     }
-    
+
     .classic-toolbar-widget.dropdown-active {
         height: 50vh;
     }
-    
+
     .classic-toolbar-widget .ck.ck-toolbar {
         --ck-color-toolbar-background: transparent;
         --ck-color-button-default-background: transparent;
@@ -47,7 +47,7 @@ body.mobile {
         background-color: transparent;
         border: none;
     }
-    
+
     .classic-toolbar-widget .ck.ck-button.ck-disabled {
         opacity: 0.3;
     }
